fix: focus mode on ios safari

--- a/static/css/outterMobile.css
+++ b/static/css/outterMobile.css
@@ -1,5 +1,6 @@
 html.pad, html.pad body{
-  height: 100vh!important;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  /* height: calc(var(--vh, 1vh) * 100); */
   position: relative!important;
 }
 
@@ -285,7 +286,7 @@ body > header .shortMenue .btnChat button{
 #mobileToolbar{
   width: 100%;
   height: 40px;
-  position: fixed;
+  position: absolute;
   align-items: center;
   justify-content: center;
   bottom: 0;
